# Newton-TPR

./: .gitignore  README.md  index.json  pyproject.toml
extracted_data/: 145_traffic_control_signals.csv  145_traffic_control_signals.tsv  146_flashing_warning_lights.csv  146_flashing_warning_lights.tsv  147_stop_signs.csv  147_stop_signs.tsv  148_yield_signs.csv  148_yield_signs.tsv  149_school_zones.csv  149_school_zones.tsv  150_safety_zones.csv  150_safety_zones.tsv  172_loading_zones.csv  172_loading_zones.tsv  176_street_parking_regulations.tsv  177_game_day_parking.tsv  179_school_drop_off_zones.csv  179_school_drop_off_zones.tsv  180_stopping_prohibited.tsv  194_municipal_parking_time_limits.csv  194_municipal_parking_time_limits.tsv  196_unmetered_parking_time_limits.tsv  199_fire_lanes.csv  199_fire_lanes.tsv  200_accessible_parking_spaces.csv  200_accessible_parking_spaces.tsv  201_overnight_angle_parking.tsv  202_resident_restricted_areas.tsv  204_tiger_parking_permits.tsv  205_newtonville_parking_district.tsv  206_auburndale_parking_district.tsv  208_waban_parking_district.tsv  209_newton_highlands_parking_district.tsv  210_newton_corner_parking_district.tsv  211_charlesbank_parking_district.tsv  219_removed_parking_spaces.tsv  220_tow_zones.tsv  221_game_day_sign_locations.tsv  83_commercial_vehicle_restrictions.csv  83_commercial_vehicle_restrictions.tsv  (+24 more)
scripts/: CRON_SETUP.md  README.md  get-tpr.py  number-pages.sh  process-tpr.py  split_sections.py  tpr-to-sections.py  update-tpr-cron.sh
sections/: 00-preamble.txt  145.txt  146.txt  147.txt  148.txt  (+44 more)
(+94 files in other folders)
