[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newton-tpr"
version = "0.1.0"
description = "Newton Traffic Parking Regulations Extractor"
requires-python = ">=3.10"
readme = "README.md"

[project.optional-dependencies]
dev = [
    "pytest",
]