[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "newton-tpr"
version = "0.1.0"
description = "Newton Traffic Parking Regulations Extractor"
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "curl_cffi>=0.7.0",
    "beautifulsoup4>=4.9.0",
    "pdfminer.six>=20221105",
]

[project.optional-dependencies]
dev = [
    "pytest",
]